[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/RPGSystem.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/dialogue.png" type="Texture" id=2]
[ext_resource path="res://UI/typesound2.wav" type="AudioStream" id=3]
[ext_resource path="res://Levels/IntroDialogue.gd" type="Script" id=4]
[ext_resource path="res://Autoloads/SceneChanger.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 5
outline_color = Color( 0, 0, 0, 1 )
extra_spacing_char = 1
font_data = ExtResource( 1 )

[node name="Intro" type="Node2D"]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="SceneChanger" parent="." instance=ExtResource( 5 )]

[node name="DialogueBox" type="Control" parent="."]
visible = false
margin_left = 51.0
margin_top = 70.0
margin_right = 110.0
margin_bottom = 86.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="DialogueBox"]
margin_left = -28.0
margin_top = -10.0
margin_right = 85.0
margin_bottom = 16.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueBox"]
anchor_left = 1.1
anchor_top = 0.975
anchor_right = 3.425
anchor_bottom = 1.375
margin_left = -85.9
margin_top = -19.6
margin_right = -124.075
margin_bottom = -9.0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="DialogueBox"]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DialogueBox"]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="timeout" from="Timer" to="DialogueBox" method="_on_Timer_timeout"]
[connection signal="tween_completed" from="DialogueBox/Tween" to="DialogueBox" method="_on_Tween_tween_completed"]
